--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
 	<title>Suite Controls Tutorial</title>
 
 	<script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/1.88.0/resources/sap-ui-core.js"
-		data-sap-ui-theme="sap_fiori_3" data-sap-ui-compatVersion="edge" data-sap-ui-resourceroots='{
+		data-sap-ui-theme="sap_belize" data-sap-ui-compatVersion="edge" data-sap-ui-resourceroots='{
 				"sap.suite.ui.commons.demo.tutorial": ""
 			}' data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" data-sap-ui-animation="true" data-sap-ui-async="true">
 			</script>
