--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,6 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+	<!-- <meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Sign In with Auth0</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" /> -->
+
 	<title>Suite Controls Tutorial</title>
 
 	<script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/1.88.0/resources/sap-ui-core.js"
@@ -16,6 +22,64 @@
 </head>
 
 <body class="sapUiBody" id="content">
+	<!-- <script src="https://cdn.auth0.com/js/lock/11.30/lock.min.js"></script>
+	<script>
+		// Decode utf8 characters properly
+		var config = JSON.parse(decodeURIComponent(escape(window.atob('@@config@@'))));
+		config.extraParams = config.extraParams || {};
+		var connection = config.connection;
+		var prompt = config.prompt;
+		var languageDictionary;
+		var language;
+
+		if (config.dict && config.dict.signin && config.dict.signin.title) {
+			languageDictionary = { title: config.dict.signin.title };
+		} else if (typeof config.dict === 'string') {
+			language = config.dict;
+		}
+		var loginHint = config.extraParams.login_hint;
+		var colors = config.colors || {};
+
+		// Available Lock configuration options: https://auth0.com/docs/libraries/lock/v11/configuration
+		var lock = new Auth0Lock(config.clientID, config.auth0Domain, {
+			auth: {
+				redirectUrl: config.callbackURL,
+				responseType: (config.internalOptions || {}).response_type ||
+					(config.callbackOnLocationHash ? 'token' : 'code'),
+				params: config.internalOptions
+			},
+			configurationBaseUrl: config.clientConfigurationBaseUrl,
+			overrides: {
+				__tenant: config.auth0Tenant,
+				__token_issuer: config.authorizationServer.issuer
+			},
+			assetsUrl: config.assetsUrl,
+			allowedConnections: connection ? [connection] : null,
+			rememberLastLogin: !prompt,
+			language: language,
+			languageDictionary: languageDictionary,
+			theme: {
+				//logo:            'YOUR LOGO HERE',
+				primaryColor: colors.primary ? colors.primary : 'green'
+			},
+			prefill: loginHint ? { email: loginHint, username: loginHint } : null,
+			closable: false,
+			defaultADUsernameFromEmailPrefix: false
+		});
+
+		if (colors.page_background) {
+			var css = '.auth0-lock.auth0-lock .auth0-lock-overlay { background: ' +
+				colors.page_background +
+				' }';
+			var style = document.createElement('style');
+
+			style.appendChild(document.createTextNode(css));
+
+			document.body.appendChild(style);
+		}
+
+		lock.show();
+	</script> -->
 	<div data-sap-ui-component data-name="sap.suite.ui.commons.demo.tutorial" data-id="container"></div>
 </body>
 
